--- a/checkout.html
+++ b/checkout.html
@@ -7,9 +7,183 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
   <style>
-    /* --- Keep all your existing CSS here --- */
-    /* For brevity, I'm omitting the CSS in this snippet, but you can copy your original CSS block */
-  </style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --primary: #1a1a1a;
+  --secondary: #2d2d2d;
+  --accent: #554024;
+  --accent-hover: #4d4024;
+  --success: #10b981;
+  --text-primary: #ffffff;
+  --text-secondary: #a3a3a3;
+  --border: #404040;
+  --input-bg: #2d2d2d;
+}
+body {
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+  background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+  min-height: 100vh;
+  color: var(--text-primary);
+  padding: 0;
+  overflow-x: hidden;
+}
+.container {
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 16px;
+  min-height: 100vh;
+}
+.checkout-card {
+  background: var(--primary);
+  border-radius: 24px;
+  border: 1px solid var(--border);
+  overflow: hidden;
+  box-shadow: 0 20px 60px rgba(0,0,0,0.4);
+  animation: fadeIn 0.5s ease;
+}
+.header {
+  background: linear-gradient(135deg, var(--accent) 0%, #31280e 100%);
+  padding: 32px 24px;
+  text-align: center;
+}
+.header h1 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 4px;
+  letter-spacing: -0.5px;
+}
+.header .subtitle {
+  font-size: 14px;
+  opacity: 0.9;
+  font-weight: 500;
+}
+.section {
+  padding: 24px;
+  border-bottom: 1px solid var(--border);
+}
+.section:last-child { border-bottom: none; }
+.section-title {
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  color: var(--text-secondary);
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.cart-items {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  max-height: 240px;
+  overflow-y: auto;
+  padding-right: 4px;
+}
+.cart-items::-webkit-scrollbar { width: 4px; }
+.cart-items::-webkit-scrollbar-track { background: var(--secondary); border-radius: 4px; }
+.cart-items::-webkit-scrollbar-thumb { background: var(--accent); border-radius: 4px; }
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 16px;
+  background: var(--secondary);
+  border-radius: 12px;
+  border: 1px solid var(--border);
+}
+.item-name { font-size: 15px; font-weight: 500; flex: 1; }
+.item-price { font-size: 15px; font-weight: 600; color: var(--accent); }
+.cart-total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 24px;
+  background: var(--secondary);
+  margin: 16px 0 0 0;
+  border-radius: 16px;
+  border: 2px solid var(--accent);
+}
+.total-label { font-size: 16px; font-weight: 600; color: var(--text-secondary); }
+.total-amount { font-size: 24px; font-weight: 700; color: var(--accent); }
+.qr-container { text-align: center; padding: 16px; }
+.qr-code {
+  width: 200px; height: 200px; margin: 16px auto; border-radius: 16px;
+  border: 2px solid var(--border); background: white; padding: 12px;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.3);
+}
+.qr-instruction { font-size: 14px; color: var(--text-secondary); margin-bottom: 8px; }
+.form-group { margin-bottom: 16px; }
+.form-label {
+  display: block; font-size: 13px; font-weight: 600;
+  color: var(--text-secondary); margin-bottom: 8px;
+  text-transform: uppercase; letter-spacing: 0.3px;
+}
+.form-input {
+  width: 100%; padding: 14px 16px; background: var(--input-bg);
+  border: 1px solid var(--border); border-radius: 12px; color: var(--text-primary);
+  font-size: 15px; font-family: inherit; transition: all 0.2s;
+}
+.form-input:focus {
+  outline: none; border-color: var(--accent); background: var(--secondary);
+  box-shadow: 0 0 0 3px rgba(14,165,233,0.1);
+}
+.form-input::placeholder { color: #666; }
+.file-upload { position: relative; width: 100%; margin-bottom: 16px; }
+.file-upload-input {
+  position: absolute; width: 1px; height: 1px; opacity: 0; overflow: hidden; z-index: -1;
+}
+.file-upload-label {
+  display: flex; flex-direction: column; align-items: center; justify-content: center;
+  gap: 12px; padding: 32px 20px; background: var(--secondary);
+  border: 2px dashed var(--border); border-radius: 16px; cursor: pointer; transition: all 0.3s;
+  text-align: center; min-height: 140px;
+}
+.file-upload-label:active { transform: scale(0.98); }
+.file-upload-label:hover { border-color: var(--accent); background: var(--input-bg); }
+.upload-icon { font-size: 40px; opacity: 0.6; }
+.upload-text { font-size: 15px; font-weight: 500; color: var(--text-primary); }
+.upload-subtext { font-size: 13px; color: var(--text-secondary); }
+.file-name-display {
+  margin-top: 12px; padding: 12px 16px; background: var(--accent); color: white;
+  border-radius: 8px; font-size: 14px; font-weight: 500;
+  display: flex; align-items: center; gap: 8px; animation: slideDown 0.3s ease;
+}
+@keyframes slideDown {
+  from { opacity: 0; transform: translateY(-10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+.preview-container { margin-top: 16px; text-align: center; }
+.preview-image { max-width: 100%; max-height: 300px; border-radius: 12px; border: 2px solid var(--border);
+  box-shadow: 0 8px 24px rgba(0,0,0,0.3);
+}
+.submit-btn {
+  width: 100%; padding: 16px; background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%);
+  border: none; border-radius: 16px; color: white; font-size: 16px; font-weight: 600; cursor: pointer;
+  transition: all 0.3s; box-shadow: 0 4px 16px rgba(14,165,233,0.3); font-family: inherit;
+}
+.submit-btn:hover:not(:disabled) { transform: translateY(-2px); box-shadow: 0 6px 24px rgba(14,165,233,0.4); }
+.submit-btn:active:not(:disabled) { transform: translateY(0); }
+.submit-btn:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
+.note { text-align: center; font-size: 13px; color: var(--text-secondary); margin-top: 16px; padding: 12px; background: var(--secondary); border-radius: 8px; }
+.empty-cart { text-align: center; padding: 40px 20px; color: var(--text-secondary); }
+.empty-cart-icon { font-size: 48px; margin-bottom: 16px; opacity: 0.5; }
+.step-badge { display: inline-flex; align-items: center; justify-content: center; width: 24px; height: 24px; background: var(--accent); border-radius: 50%; font-size: 12px; font-weight: 700; }
+.loading-overlay {
+  position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.8);
+  display: flex; align-items: center; justify-content: center; z-index: 9999; flex-direction: column; gap: 16px;
+}
+.spinner { width: 50px; height: 50px; border: 4px solid var(--border); border-top-color: var(--accent); border-radius: 50%; animation: spin 1s linear infinite; }
+@keyframes spin { to { transform: rotate(360deg); } }
+@media (max-width: 480px) { .container { padding: 12px; } .header { padding: 24px 20px; } .header h1 { font-size: 20px; } .section { padding: 20px; } .qr-code { width: 180px; height: 180px; } .cart-total { padding: 16px 20px; } .total-amount { font-size: 20px; } }
+@media (min-width: 481px) { .container { padding: 24px; display: flex; align-items: center; } .checkout-card { width: 100%; } }
+@keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+</style>
 </head>
 <body>
   <div class="container">
@@ -153,7 +327,7 @@
         formData.append('file', file);
         formData.append('upload_preset', 'demo_preset'); // replace with your preset
 
-        const response = await fetch('https://api.cloudinary.com/v1_1/dsfy5akpz/image/upload', { // replace with your cloud name
+        const response = await fetch('https://api.cloudinary.com/v1_1/mycloud123/image/upload', { // replace with your cloud name
           method: 'POST',
           body: formData
         });
